servlet test; generateCode test; success

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,16 @@
 #jdbc.driver=oracle.jdbc.driver=oracle.jdbc.OracleDriverjdbc:oracle:thin:@localhost:1521:orcl
 #jdbc.username=root
 #jdbc.password=ufsoft
-jdbc.driver=oracle.jdbc.OracleDriver
-jdbc.url=jdbc:oracle:thin:@172.16.8.125:1521/orcl
-jdbc.username=ME_GUIYE
-jdbc.password=1
+########oracle###########
+#jdbc.driver=oracle.jdbc.OracleDriver
+#jdbc.url=jdbc:oracle:thin:@172.16.8.125:1521/orcl
+#jdbc.username=ME_GUIYE
+#jdbc.password=1
+########mysql###########
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/adminsys?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+jdbc.username=root
+jdbc.password=root
 
 #######################################连接池信息###############################################
 #连接池初始化时创建的连接数
