--- a/pom.xml
+++ b/pom.xml
@@ -1,35 +1,148 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.liuzhen</groupId>
-  <artifactId>adminsys-be</artifactId>
-  <packaging>war</packaging>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>adminsys-be Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  <properties>
-		<!-- 主要依赖库的版本定义 -->
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.liuzhen</groupId>
+	<artifactId>adminsys-be</artifactId>
+	<packaging>war</packaging>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>adminsys-be Maven Webapp</name>
+	<url>http://maven.apache.org</url>
+	<properties>
+		<!-- spring版本号 -->
 		<springVersion>4.3.14.RELEASE</springVersion>
-  </properties>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>  
-        <groupId>org.springframework</groupId>  
-        <artifactId>spring-web</artifactId>  
-        <version>${springVersion}</version>  
-    </dependency>  
-    <dependency>  
-        <groupId>org.springframework</groupId>  
-        <artifactId>spring-webmvc</artifactId>  
-        <version>${springVersion}</version>  
-    </dependency>
-  </dependencies>
-  <build>
-    <finalName>adminsys-be</finalName>
-  </build>
+		<!-- mybatis版本号 -->
+		<mybatis.version>3.2.6</mybatis.version>
+		<slf4j.version>1.7.7</slf4j.version>
+		<!-- log4j日志文件管理包版本 -->
+		<log4j.version>2.8.2</log4j.version>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${springVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${springVersion}</version>
+		</dependency>
+		<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${springVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>${springVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${springVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${springVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${springVersion}</version>
+        </dependency>
+		<!-- mybatis/spring包 -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>1.2.2</version>
+		</dependency>
+		<!-- 导入dbcp的jar包，用来在applicationContext.xml中配置数据库 -->
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.2.2</version>
+		</dependency>
+		<!-- 日志文件管理包 -->
+		<!-- log start -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.8.2</version>
+		</dependency>
+		<!-- 格式化对象，方便输出日志 -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.1.41</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<!-- log end -->
+		<!-- 映入JSON -->
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency>
+	</dependencies>
+	<build>
+		<finalName>adminsys-be</finalName>
+		<!--使用的插件列表  -->  
+	    <plugins>  
+	        <plugin>
+		        <groupId>org.mybatis.generator</groupId>
+		        <artifactId>mybatis-generator-maven-plugin</artifactId>
+		        <version>1.3.2</version>
+		        
+		        <executions>
+			        <execution>
+				        <id>Generate MyBatis Files</id>
+				        <goals>
+				        	<goal>generate</goal>
+				        </goals>
+				        <phase>generate</phase>
+				        <configuration>
+					        <verbose>true</verbose>
+					        <overwrite>true</overwrite>
+				        </configuration>
+			        </execution>
+		        </executions>
+		        <dependencies>
+			        <!-- mybatis代码自动生成 -->
+					<dependency>
+						<groupId>org.mybatis.generator</groupId>
+						<artifactId>mybatis-generator-core</artifactId>
+						<version>1.3.5</version>
+					</dependency>
+					<!-- 导入Mysql数据库链接jar包 -->
+					<dependency>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>5.1.30</version>
+					</dependency>
+			        <dependency>
+				        <groupId>org.mybatis</groupId>
+				        <artifactId>mybatis</artifactId>
+				        <version>3.4.2</version>
+			        </dependency>
+		        </dependencies>
+	        </plugin>  
+	    </plugins>
+	</build>
 </project>
